# varnish-counters-demo

./: Cargo.toml  README.md
src/: main.rs  main.rs.simple
