[package]
name = "varnish-counters-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
tabled = "0.15.0"
varnish = { git = "https://github.com/gquintard/varnish-rs.git", rev = "372b496309f1c3f04e809f0fcb5b0162416c6f2d" }
